相対パス修正によりGitHub Pages表示崩れを修正

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="/coding-assignment-gm/css/style.css">
-    <title>gym</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>DesignFitness</title>
 </head>
 <body>
 <div class="wrapper">
@@ -13,7 +13,7 @@
         <div class="he-inner-1 widthmax">
             <div class="he-left">
                 <h1>
-                    <img src="/coding-assignment-gm/images/logo.png" alt="designfitness">                   
+                    <img src="images/logo.png" alt="designfitness">                   
                 </h1>
             </div>
             <div class="he-right">
@@ -55,7 +55,7 @@
     </header>
     <main>
         <div class="top-mv">
-            <img src="/coding-assignment-gm/images/mv.jpg" alt="mv">
+            <img src="images/mv.jpg" alt="mv">
         </div>
         <article class="sub-1">
             <h2>わたしたちの理念</h2>
@@ -73,14 +73,14 @@
             <section class="widthmax">
                 <section class="course">
                     <div class="cs-ch">
-                        <img src="/coding-assignment-gm/images/course01.jpg" alt="course01">
+                        <img src="images/course01.jpg" alt="course01">
                         <h3 class="cs-h3">体験コース</h3>
                         <p>とりあえずトレーニングがどのようなものかを体験してみたい人向け。
                             体験40分/無料カウンセリング20分 計60分のお試しコースです。
                         </p>
                     </div>
                     <div class="cs-ch">
-                        <img src="/coding-assignment-gm/images/course02.jpg" alt="course01">
+                        <img src="images/course02.jpg" alt="course01">
                         <h3 class="cs-h3">ダイエット集中コース</h3>
                         <p>食事指導つき。食事と運動の両面からあ
                             なたのダイエットを徹底的にサポート。
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                     <div class="cs-ch">
-                        <img src="/coding-assignment-gm/images/course03.jpg" alt="course01">
+                        <img src="images/course03.jpg" alt="course01">
                         <h3 class="cs-h3">ボディメイクコース</h3>
                         <p>筋肉を大きくしてしっかりボディメイクし
                             たい方向け。大会で優秀経験のあるトレーナー
@@ -103,7 +103,7 @@
         <article class="message">
             <div class="message-inner">
                 <h2>トレーナーからのメッセージ</h2>
-                <div class="tra1"><img src="/coding-assignment-gm/images/180x220.png" alt="trainer">
+                <div class="tra1"><img src="images/180x220.png" alt="trainer">
                     <p class="space">お客様によって様々なニーズ・状態がありますのでしっかりとヒアリング、現状チェックの上適切な目標設定を行いますので、
                     女性の方もシニアの方も安心して通っていただけます。<mark>予約は24時間いつでもスマホから</mark>できます。</p>
                     <p class="space">
